--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,13 @@
 
 
   <app-header></app-header>
-  
-  <h1>
-    {{ title }}!
-  </h1>
-  <ul>Curso:{{curso}}</ul>
-  <ul>Profesor:{{profesor}}</ul>
-  <ul>Alumno:{{alumno}}</ul>
+  <div class="container">
+    <h1>
+      {{ title }}!
+    </h1>
+    <ul>Curso:{{curso}}</ul>
+    <ul>Profesor:{{profesor}}</ul>
+    <ul>Alumno:{{alumno}}</ul>
+  </div>
+  <app-footer></app-footer>
 
