--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,9 +5,7 @@
     <h1>
       {{ title }}!
     </h1>
-    <ul>Curso:{{curso}}</ul>
-    <ul>Profesor:{{profesor}}</ul>
-    <ul>Alumno:{{alumno}}</ul>
+    <app-directiva></app-directiva>
   </div>
   <app-footer></app-footer>
 
