--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -13,6 +13,7 @@
             <th>Email</th>
             <th>Apellido</th>
             <th>Fecha</th>
+            <th>Editar</th>
           </tr>
       </thead>
       <tbody>
@@ -22,6 +23,9 @@
           <td>{{ cliente.apellido }}</td>
           <td>{{ cliente.email }}</td>
           <td>{{ cliente.createAt }}</td>
+          <td>
+            <button type="submit" name="button" [routerLink]="['/clientes/form/', cliente.id]" class="btn btn-primary">Editar</button>
+          </td>
         </tr>
       </tbody>
     </table>
