--- a/src/app/clientes/clientes.component.html
+++ b/src/app/clientes/clientes.component.html
@@ -14,6 +14,7 @@
             <th>Apellido</th>
             <th>Fecha</th>
             <th>Editar</th>
+            <th>Eliminar</th>
           </tr>
       </thead>
       <tbody>
@@ -25,6 +26,9 @@
           <td>{{ cliente.createAt }}</td>
           <td>
             <button type="submit" name="button" [routerLink]="['/clientes/form/', cliente.id]" class="btn btn-primary">Editar</button>
+          </td>
+          <td>
+            <button type="button" name="eliminar" (click)="delete(cliente)" class="btn btn-danger">Eliminar</button>
           </td>
         </tr>
       </tbody>
